--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "test:unit": "jest --collectCoverage"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/koa": "^2.0.48",
         "@types/koa-bodyparser": "^4.2.2",
         "@types/koa-compress": "^2.0.9",
@@ -36,6 +37,7 @@
         "typescript": "^3.4.5"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "koa": "^2.7.0",
         "koa-body": "^4.1.0",
         "koa-bodyparser": "^4.2.1",
