--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/koa-bodyparser": "^4.2.2",
         "@types/koa-compress": "^2.0.9",
         "@types/koa-router": "^7.0.40",
+        "@types/mongoose": "^5.5.7",
         "@types/node": "^12.0.1",
         "jest": "^24.8.0",
         "nodemon": "^1.19.0",
@@ -44,6 +45,8 @@
         "koa-compose": "^4.1.0",
         "koa-compress": "^3.0.0",
         "koa-router": "^7.4.0",
+        "moment": "^2.24.0",
+        "mongoose": "^5.6.2",
         "swagger2": "^1.0.4",
         "swagger2-koa": "^1.0.3"
     }
