--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,19 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2017",
-    "outDir": "bin",
-    "lib": ["es2017"],
-    "removeComments": true,
-    "strict": true,
-    "alwaysStrict": true,
-    "strictNullChecks": false,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "preserveConstEnums": true
+      "module": "commonjs",
+      "noImplicitAny": true,
+      "removeComments": true,
+      "preserveConstEnums": true,
+      "sourceMap": true,
+      "target": "ES6",
+      "outDir": "bin",
+      "lib": ["es6"]
   },
   "include": [
-    "src/**/*"
+      "src/**/*",
+      "tests/**/*"
   ],
   "exclude": [
-    "node_modules"
+      "node_modules"
   ]
 }
